fixes SCHEDULING-359, SCHEDULING-422, SCHEDULING-324
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/scheduling/trunk@13839 28e8926c-6b08-0410-baaa-805c5e19b8d6